--- a/.github/workflows/node_ci.yml
+++ b/.github/workflows/node_ci.yml
@@ -105,6 +105,7 @@ jobs:
     env:
       working-directory: ./server
       PORT: 5000
+      MONGODB_URL: mongodb://127.0.0.1:27017/test
     strategy:
       fail-fast: false
       matrix:
