--- a/.github/workflows/node_ci.yml
+++ b/.github/workflows/node_ci.yml
@@ -3,10 +3,6 @@ name: Node CI
 on:
   workflow_call:
 
-env:
-  SERVER_COVERAGE_OUTPUT: server-test-coverage-${{ github.head_ref }}-${{ github.sha }}
-  CLIENT_COVERAGE_OUTPUT: client-test-coverage-${{ github.head_ref }}-${{ github.sha }}
-
 jobs:
 
   # repo_lint:
@@ -91,8 +87,8 @@ jobs:
       - name: "📁 Upload test coverage artifact"
         uses: actions/upload-artifact@v3
         with:
-          name: ${{ env.SERVER_COVERAGE_OUTPUT }}
-          path: ${{ env.working-directory }}coverage/coverage-final.json
+          name: client-coverage-final.json
+          path: ${{ env.working-directory }}/coverage/coverage-final.json
           retention-days: 3
 
       - name: "🏗 Build client"
@@ -150,8 +146,8 @@ jobs:
       - name: "📁 Upload test coverage artifact"
         uses: actions/upload-artifact@v3
         with:
-          name: ${{ env.SERVER_COVERAGE_OUTPUT }}
-          path: ${{ env.working-directory }}coverage/coverage-final.json
+          name: server-coverage-final.json
+          path: ${{ env.working-directory }}/coverage/coverage-final.json
           retention-days: 3
 
   coverage:
@@ -166,14 +162,12 @@ jobs:
       - name: "⬇️ Download the client test coverage report"
         uses: actions/download-artifact@v3
         with:
-          name: ./server/coverage/coverage-final.json
-          path: ~/client-coverage/
+          name: server-coverage-final.json
 
       - name: "⬇️ Download the server test coverage report"
         uses: actions/download-artifact@v3
         with:
-          name: ./server/coverage/coverage-final.json
-          path: ~/server-coverage/
+          name: client-coverage-final.json
 
       - name: "📜 Display structure of downloaded files"
         run: ls -R
@@ -184,7 +178,7 @@ jobs:
           node-version: ${{ matrix.node }}
 
       - name: "🔀 Merge the coverage reports"
-        run: npx istanbul-merge --out coverage.json ./client-coverage/coverage-final.json ./server-coverage/coverage-final.json
+        run: npx istanbul-merge --out coverage.json ./client-coverage-final.json ./server-coverage-final.json
 
       - name: "⬆️ Comment test coverage report"
         uses: ArtiomTr/jest-coverage-report-action@v2
