fix jest coverage report action

--- a/.github/workflows/node_ci.yml
+++ b/.github/workflows/node_ci.yml
@@ -182,6 +182,8 @@ jobs:
 
       - name: "⬆️ Comment test coverage report"
         uses: ArtiomTr/jest-coverage-report-action@v2
+        with:
+          coverage-file: ./coverage-final.json
 
       # - name: "🌪️ Publish to coveralls.io"
       #   uses: coverallsapp/github-action@master
