--- a/.github/workflows/node_ci.yml
+++ b/.github/workflows/node_ci.yml
@@ -164,19 +164,10 @@ jobs:
         with:
           name: client-coverage
 
-      - name: "📜 Copy the client coverage file"
-        run: mv coverage-final.json client-coverage-final.json
-
       - name: "⬇️ Download the server test coverage report"
         uses: actions/download-artifact@v3
         with:
           name: server-coverage
-
-      - name: "📜 Copy the server coverage file"
-        run: mv coverage-final.json server-coverage-final.json
-
-      - name: "📜 Display structure of downloaded files"
-        run: ls -R
 
       - name: "🔧 Set up Node"
         uses: actions/setup-node@v1
@@ -185,6 +176,9 @@ jobs:
 
       - name: "🔀 Merge the coverage reports"
         run: npx istanbul-merge --out coverage-final.json ./client-coverage-final.json ./server-coverage-final.json
+
+      - name: "📜 Display file contents"
+        run: echo "$(<coverage-final.json )"
 
       - name: "⬆️ Comment test coverage report"
         uses: ArtiomTr/jest-coverage-report-action@v2
