--- a/.github/workflows/node_ci.yml
+++ b/.github/workflows/node_ci.yml
@@ -166,7 +166,7 @@ jobs:
 
       - name: "📜 Copy the client coverage file"
         run: |
-          run: echo "$(<coverage-final.json )"
+          echo "$(<coverage-final.json )"
           mv coverage-final.json client-coverage-final.json
 
       - name: "⬇️ Download the server test coverage report"
@@ -176,7 +176,7 @@ jobs:
 
       - name: "📜 Copy the server coverage file"
         run: |
-          run: echo "$(<coverage-final.json )"
+          echo "$(<coverage-final.json )"
           mv coverage-final.json server-coverage-final.json
 
       - name: "🔧 Set up Node"
