--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -67,12 +67,11 @@ jobs:
         uses: docker/setup-buildx-action@v1
 
       - name: "🐳 Publish to DockerHub Registry"
-        working-directory: ${{ env.working-directory }}
         uses: docker/build-push-action@v2
         env:
           DOCKERHUB_REPO: ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_REPO_SERVER }}
         with:
-          context: ./
+          context: ${{ env.working-directory }}
           file: ./Dockerfile
           builder: ${{ steps.buildx.outputs.name }}
           push: true
@@ -81,7 +80,6 @@ jobs:
           cache-to: type=registry,ref=${{ env.DOCKERHUB_REPO }}:buildcache,mode=max
 
   publish_client:
-    needs: [publish_server]
     name: 🐳 DockerHub Client Publish
     runs-on: ubuntu-latest
     env:
@@ -128,12 +126,11 @@ jobs:
         uses: docker/setup-buildx-action@v1
 
       - name: "🐳 Publish to DockerHub Registry"
-        working-directory: ${{ env.working-directory }}
         uses: docker/build-push-action@v2
         env:
           DOCKERHUB_REPO: ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_REPO_CLIENT }}
         with:
-          context: ./
+          context: ${{ env.working-directory }}
           file: ./Dockerfile
           builder: ${{ steps.buildx.outputs.name }}
           push: true
@@ -141,8 +138,8 @@ jobs:
           cache-from: type=registry,ref=${{ env.DOCKERHUB_REPO }}:buildcache
           cache-to: type=registry,ref=${{ env.DOCKERHUB_REPO }}:buildcache,mode=max
 
-
   deploy_ec2:
+    needs: [publish_client, publish_server]
     name: 🚀 EC2 Depoyment
     runs-on: ubuntu-latest
 
