--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,12 +27,7 @@ env:
 
 jobs:
 
-  publish_server:
-    name: 🐳 DockerHub Server Publish
-    runs-on: ubuntu-latest
-    env:
-      working-directory: ./server
-
+  docker-publish:
     steps:
       - name: "☁️ Check out Git Repository"
         uses: actions/checkout@v2
@@ -42,77 +37,35 @@ jobs:
         with:
           node-version: ${{ env.NODE_VERSION }}
 
-      - name: "⚡ Cache node modules"
+      - name: "⚡ Cache [CLIENT] node modules"
         uses: actions/cache@v2
-        id: npm_cache_id
+        id: npm_client_cache_id
         with:
-          path: node_modules
-          key: server-${{ runner.os }}-npm-cache-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            server-${{ runner.os }}-npm-cache-
-            server-${{ runner.os }}-
-
-      - name: "📦 Install dependencies"
-        working-directory: ${{ env.working-directory }}
-        if: steps.npm_cache_id.outputs.cache-hit != 'true'
-        run: npm install
-
-      - name: "🔒 Login to DockerHub"
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
-
-      - name: "🔧 Set up Docker Buildx"
-        uses: docker/setup-buildx-action@v1
-
-      - name: "🐳 Publish to DockerHub Registry"
-        uses: docker/build-push-action@v2
-        env:
-          DOCKERHUB_REPO: ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_REPO_SERVER }}
-        with:
-          context: ${{ env.working-directory }}
-          file: Dockerfile
-          builder: ${{ steps.buildx.outputs.name }}
-          push: true
-          tags: ${{ env.DOCKERHUB_REPO }}:latest
-          cache-from: type=registry,ref=${{ env.DOCKERHUB_REPO }}:buildcache
-          cache-to: type=registry,ref=${{ env.DOCKERHUB_REPO }}:buildcache,mode=max
-
-  publish_client:
-    name: 🐳 DockerHub Client Publish
-    runs-on: ubuntu-latest
-    env:
-      working-directory: ./client
-
-    steps:
-      - name: "☁️ Check out Git Repository"
-        uses: actions/checkout@v2
-
-      - name: "🔧 Set up Node"
-        uses: actions/setup-node@v1
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-
-      - name: "⚡ Cache node modules"
-        uses: actions/cache@v2
-        id: npm_cache_id
-        with:
-          path: node_modules
+          path: ./client/node_modules
           key: client-${{ runner.os }}-npm-cache-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             client-${{ runner.os }}-npm-cache-
             client-${{ runner.os }}-
 
-      - name: "📦 Install dependencies"
-        working-directory: ${{ env.working-directory }}
-        if: steps.npm_cache_id.outputs.cache-hit != 'true'
+      - name: "📦 Install [CLIENT] dependencies"
+        working-directory: ./client
+        if: steps.npm_client_cache_id.outputs.cache-hit != 'true'
         run: npm install
 
-      - name: "⚙️ Generate .env file for Client"
-        working-directory: ${{ env.working-directory }}
-        run: |
-          echo ${{ secrets.ENV_PRODUCTION }} > .env
+      - name: "⚡ Cache [SERVER] node modules"
+        uses: actions/cache@v2
+        id: npm_server_cache_id
+        with:
+          path: ./server/node_modules
+          key: server-${{ runner.os }}-npm-cache-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            server-${{ runner.os }}-npm-cache-
+            server-${{ runner.os }}-
+
+      - name: "📦 Install [SERVER] dependencies"
+        working-directory: ./server
+        if: steps.npm_server_cache_id.outputs.cache-hit != 'true'
+        run: npm install
 
       - name: "🔒 Login to DockerHub"
         uses: docker/login-action@v1
@@ -120,21 +73,26 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
-      - name: "🔧 Set up Docker Buildx"
-        uses: docker/setup-buildx-action@v1
+      - name: 🐳 DockerHub Publish
+        run:
+          docker-compose build
+          docker-compose push
 
-      - name: "🐳 Publish to DockerHub Registry"
-        uses: docker/build-push-action@v2
-        env:
-          DOCKERHUB_REPO: ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_REPO_CLIENT }}
-        with:
-          context: ${{ env.working-directory }}
-          file: Dockerfile
-          builder: ${{ steps.buildx.outputs.name }}
-          push: true
-          tags: ${{ env.DOCKERHUB_REPO }}:latest
-          cache-from: type=registry,ref=${{ env.DOCKERHUB_REPO }}:buildcache
-          cache-to: type=registry,ref=${{ env.DOCKERHUB_REPO }}:buildcache,mode=max
+  #     - name: "🔧 Set up Docker Buildx"
+  #       uses: docker/setup-buildx-action@v1
+
+  #     - name: "🐳 Publish to DockerHub Registry"
+  #       uses: docker/build-push-action@v2
+  #       env:
+  #         DOCKERHUB_REPO: ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_REPO_SERVER }}
+  #       with:
+  #         context: ${{ env.working-directory }}
+  #         file: Dockerfile
+  #         builder: ${{ steps.buildx.outputs.name }}
+  #         push: true
+  #         tags: ${{ env.DOCKERHUB_REPO }}:latest
+  #         cache-from: type=registry,ref=${{ env.DOCKERHUB_REPO }}:buildcache
+  #         cache-to: type=registry,ref=${{ env.DOCKERHUB_REPO }}:buildcache,mode=max
 
   deploy_ec2:
     needs: [publish_client, publish_server]
