--- a/.github/workflows/node_ci.yml
+++ b/.github/workflows/node_ci.yml
@@ -25,7 +25,7 @@ jobs:
         id: npm_cache_id
         with:
           path: node_modules
-          key: lint-${{ runner.os }}-npm-cache-${{ hashFiles('**/package-lock.json') }}
+          key: lint-${{ runner.os }}-npm-cache-${{ hashFiles('./package-lock.json') }}
           restore-keys: |
             lint-${{ runner.os }}-npm-cache-
             lint-${{ runner.os }}-
@@ -69,8 +69,8 @@ jobs:
         uses: actions/cache@v2
         id: npm_cache_id
         with:
-          path: ${{ env.working-directory }}/node_modules
-          key: client-${{ runner.os }}-npm-cache-${{ hashFiles('${{ env.working-directory }}/package-lock.json') }}
+          path: ./client/node_modules
+          key: client-${{ runner.os }}-npm-cache-${{ hashFiles('./client/package-lock.json') }}
           restore-keys: |
             client-${{ runner.os }}-npm-cache-
             client-${{ runner.os }}-
@@ -135,8 +135,8 @@ jobs:
         uses: actions/cache@v2
         id: npm_cache_id
         with:
-          path: ${{ env.working-directory }}/node_modules
-          key: server-${{ runner.os }}-npm-cache-${{ hashFiles('${{ env.working-directory }}/package-lock.json') }}
+          path: ./server/node_modules
+          key: server-${{ runner.os }}-npm-cache-${{ hashFiles('./server/package-lock.json') }}
           restore-keys: |
             server-${{ runner.os }}-npm-cache-
             server-${{ runner.os }}-
