--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -20,8 +20,8 @@ jobs:
       ENV_PRODUCTION: ${{ secrets.ENV_PRODUCTION }}
       DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
       DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
-      DOCKERHUB_REPO_SERVER: ${{ secrets.DOCKERHUB_REPO_SERVER }}
-      DOCKERHUB_REPO_CLIENT: ${{ secrets.DOCKERHUB_REPO_CLIENT }}
+      DOCKERHUB_SERVER_REPO: ${{ secrets.DOCKERHUB_SERVER_REPO }}
+      DOCKERHUB_CLIENT_REPO: ${{ secrets.DOCKERHUB_CLIENT_REPO }}
       EC2_REMOTE_HOST: ${{ secrets.EC2_REMOTE_HOST }}
       EC2_REMOTE_USER: ${{ secrets.EC2_REMOTE_USER }}
       EC2_SSH_KEY: ${{ secrets.EC2_SSH_KEY }}
