--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -149,10 +149,10 @@ jobs:
             echo -e "$BLUE Authenticating Docker $NC"
             docker login -u="${{ secrets.DOCKERHUB_USERNAME }}" -p="${{ secrets.DOCKERHUB_PASSWORD }}"
 
-            docker run -d -p 5000:5000 ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_SERVER_REPO }}:latest --env-file ./env --name ${{ secrets.DOCKERHUB_SERVER_REPO }}
+            docker run -d -p 5000:5000 ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_SERVER_REPO }}:latest --env-file ./.env --name ${{ secrets.DOCKERHUB_SERVER_REPO }}
             echo -e "$BLUE Started up latest Server image $NC"
 
-            docker run -d -p 80:80 ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_CLIENT_REPO }}:latest --env-file ./env --name ${{ secrets.DOCKERHUB_CLIENT_REPO }}
+            docker run -d -p 80:80 ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_CLIENT_REPO }}:latest --env-file ./.env --name ${{ secrets.DOCKERHUB_CLIENT_REPO }}
             echo -e "$BLUE Started up latest Server image $NC"
 
             docker curl http:localhost
