--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,64 +27,64 @@ env:
 
 jobs:
 
-  docker_publish:
-    name: 🐳 DockerHub Publish
-    runs-on: ubuntu-latest
+  # docker_publish:
+  #   name: 🐳 DockerHub Publish
+  #   runs-on: ubuntu-latest
 
-    steps:
-      - name: "☁️ Check out Git Repository"
-        uses: actions/checkout@v2
+  #   steps:
+  #     - name: "☁️ Check out Git Repository"
+  #       uses: actions/checkout@v2
 
-      - name: "🔧 Set up Node"
-        uses: actions/setup-node@v1
-        with:
-          node-version: ${{ env.NODE_VERSION }}
+  #     - name: "🔧 Set up Node"
+  #       uses: actions/setup-node@v1
+  #       with:
+  #         node-version: ${{ env.NODE_VERSION }}
 
-      - name: "⚡ Cache [CLIENT] node modules"
-        uses: actions/cache@v2
-        id: npm_client_cache_id
-        with:
-          path: ./client/node_modules
-          key: client-${{ runner.os }}-npm-cache-${{ hashFiles('./client/package-lock.json') }}
-          restore-keys: |
-            client-${{ runner.os }}-npm-cache-
-            client-${{ runner.os }}-
+  #     - name: "⚡ Cache [CLIENT] node modules"
+  #       uses: actions/cache@v2
+  #       id: npm_client_cache_id
+  #       with:
+  #         path: ./client/node_modules
+  #         key: client-${{ runner.os }}-npm-cache-${{ hashFiles('./client/package-lock.json') }}
+  #         restore-keys: |
+  #           client-${{ runner.os }}-npm-cache-
+  #           client-${{ runner.os }}-
 
-      - name: "📦 Install [CLIENT] dependencies"
-        working-directory: ./client
-        if: steps.npm_client_cache_id.outputs.cache-hit != 'true'
-        run: npm install
+  #     - name: "📦 Install [CLIENT] dependencies"
+  #       working-directory: ./client
+  #       if: steps.npm_client_cache_id.outputs.cache-hit != 'true'
+  #       run: npm install
 
-      - name: "⚡ Cache [SERVER] node modules"
-        uses: actions/cache@v2
-        id: npm_server_cache_id
-        with:
-          path: ./server/node_modules
-          key: server-${{ runner.os }}-npm-cache-${{ hashFiles('./server/package-lock.json') }}
-          restore-keys: |
-            server-${{ runner.os }}-npm-cache-
-            server-${{ runner.os }}-
+  #     - name: "⚡ Cache [SERVER] node modules"
+  #       uses: actions/cache@v2
+  #       id: npm_server_cache_id
+  #       with:
+  #         path: ./server/node_modules
+  #         key: server-${{ runner.os }}-npm-cache-${{ hashFiles('./server/package-lock.json') }}
+  #         restore-keys: |
+  #           server-${{ runner.os }}-npm-cache-
+  #           server-${{ runner.os }}-
 
-      - name: "📦 Install [SERVER] dependencies"
-        working-directory: ./server
-        if: steps.npm_server_cache_id.outputs.cache-hit != 'true'
-        run: npm install
+  #     - name: "📦 Install [SERVER] dependencies"
+  #       working-directory: ./server
+  #       if: steps.npm_server_cache_id.outputs.cache-hit != 'true'
+  #       run: npm install
 
-      - name: "🔒 Login to DockerHub"
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+  #     - name: "🔒 Login to DockerHub"
+  #       uses: docker/login-action@v1
+  #       with:
+  #         username: ${{ secrets.DOCKERHUB_USERNAME }}
+  #         password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
-      - name: 🔧 Create .env file
-        run: |
-          echo ${{ secrets.ENV_PRODUCTION }} > .env
-          cp .env ./client/.env
+  #     - name: 🔧 Create .env file
+  #       run: |
+  #         echo ${{ secrets.ENV_PRODUCTION }} > .env
+  #         cp .env ./client/.env
 
-      - name: 🐳 DockerHub Publish
-        run:
-          docker-compose build &&
-          docker-compose push
+  #     - name: 🐳 DockerHub Publish
+  #       run:
+  #         docker-compose build
+  #         docker-compose push
 
       ## - name: "🔧 Set up Docker Buildx"
       ##   uses: docker/setup-buildx-action@v1
@@ -149,10 +149,10 @@ jobs:
             echo -e "$BLUE Authenticating Docker $NC"
             docker login -u="${{ secrets.DOCKERHUB_USERNAME }}" -p="${{ secrets.DOCKERHUB_PASSWORD }}"
 
-            docker run -d -p 5000:5000 ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_SERVER_REPO }}:latest --env-file ./.env --name ${{ secrets.DOCKERHUB_SERVER_REPO }}
+            docker run --env-file ./.env -d -p 5000:5000 ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_SERVER_REPO }}:latest --name ${{ secrets.DOCKERHUB_SERVER_REPO }}
             echo -e "$BLUE Started up latest Server image $NC"
 
-            docker run -d -p 80:80 ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_CLIENT_REPO }}:latest --env-file ./.env --name ${{ secrets.DOCKERHUB_CLIENT_REPO }}
+            docker run --env-file ./.env -d -p 80:80 ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_CLIENT_REPO }}:latest --env-file ./.env --name ${{ secrets.DOCKERHUB_CLIENT_REPO }}
             echo -e "$BLUE Started up latest Server image $NC"
 
             docker curl http:localhost
