tweak env file setup on deployment step

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -140,7 +140,8 @@ jobs:
             echo -e "$BLUE Starting EC2 deployment script $NC"
 
             rm -f .env
-            echo ${{ secrets.ENV_PRODUCTION }} > .env
+            echo "${{ secrets.ENV_PRODUCTION }}" > .env
+            ls -a
             echo -e "$GREEN Created the production .env file $NC"
 
             docker system prune -a --volumes -f
