--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -141,7 +141,7 @@ jobs:
 
             rm -f .env
             echo "${{ secrets.ENV_PRODUCTION }}" > .env
-            ls -a
+            # ls -a
             echo -e "$GREEN Created the production .env file $NC"
 
             docker system prune -a --volumes -f
@@ -153,7 +153,7 @@ jobs:
             docker run --env-file ./.env -d -p 5000:5000 ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_SERVER_REPO }}:latest --name ${{ secrets.DOCKERHUB_SERVER_REPO }}
             echo -e "$BLUE Started up latest Server image $NC"
 
-            docker run --env-file ./.env -d -p 80:80 ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_CLIENT_REPO }}:latest --env-file ./.env --name ${{ secrets.DOCKERHUB_CLIENT_REPO }}
+            docker run --env-file ./.env -d -p 80:80 ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_CLIENT_REPO }}:latest --name ${{ secrets.DOCKERHUB_CLIENT_REPO }}
             echo -e "$BLUE Started up latest Server image $NC"
 
             docker curl http:localhost
