--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -154,9 +154,9 @@ jobs:
             echo -e "$BLUE Started up latest Server image $NC"
 
             docker run  -d -p 80:80 ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_CLIENT_REPO }}:latest
-            # docker run --env-file ./.env -d -p 80:80 ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_CLIENT_REPO }}:latest --name ${{ secrets.DOCKERHUB_CLIENT_REPO }}
+            # docker run --env-file ./.env -d -p 3000:3000 ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_CLIENT_REPO }}:latest --name ${{ secrets.DOCKERHUB_CLIENT_REPO }}
             echo -e "$BLUE Started up latest Server image $NC"
 
-            curl http:localhost
+            sudo iptables -t nat -A PREROUTING -i eth0 -p tcp --dport 80 -j
 
             echo -e "$GREEN EC2 deployment complete! $NC"
