ec2 deploy needs publish job

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -103,7 +103,7 @@ jobs:
       ##     cache-to: type=registry,ref=${{ env.DOCKERHUB_REPO }}:buildcache,mode=max
 
   deploy_ec2:
-    # needs: [docker_publish]
+    needs: [docker_publish]
     name: 🚀 EC2 Depoyment
     runs-on: ubuntu-latest
 
