expects curl to respond with localhost:3000 now

--- a/.github/workflows/docker_ci.yml
+++ b/.github/workflows/docker_ci.yml
@@ -58,7 +58,7 @@ jobs:
 
       - name: "🧪 Running on localhost"
         run: |
-          curl http://localhost
+          curl http://localhost:3000
 
       - name: "⚡ Cache (testing) node modules"
         uses: actions/cache@v2
