--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -6,6 +6,7 @@ WORKDIR /usr/src/app/
 ENV PATH /usr/src/app/node_modules/.bin:$PATH
 
 COPY package.json .
+COPY package-lock.json .
 COPY .env .
 RUN npm install
 
