--- a/.github/workflows/branch.yml
+++ b/.github/workflows/branch.yml
@@ -8,9 +8,9 @@ on:
 
 jobs:
 
-  node_ci:
-    uses: ./.github/workflows/node_ci.yml
+  # node_ci:
+  #   uses: ./.github/workflows/node_ci.yml
 
   docker_ci:
-    needs: [node_ci]
+    # needs: [node_ci]
     uses: ./.github/workflows/docker_ci.yml
