--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -22,5 +22,8 @@ RUN npm run build
 FROM nginx:1.16.0-alpine
 RUN rm -rf /usr/share/nginx/html/*
 COPY --from=builder /usr/src/app/build /usr/share/nginx/html
+
+COPY ./nginx.conf /etc/nginx/conf.d/default.conf
+
 EXPOSE 3000
 CMD ["nginx", "-g", "daemon off;"]
